@@ -1,3 +1,8 @@
+2011-09-07  Jason Merrill  <jason@redhat.com>
+
+	* testsuite/20_util/bind/ref_neg.cc: Adjust errors.
+	* testsuite/20_util/duration/cons/1_neg.cc: Adjust errors.
+
 2011-09-06  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/std/tuple (_Tuple_impl::_M_head, _M_tail): Mark constexpr.
